--- a/app.json
+++ b/app.json
@@ -76,7 +76,7 @@
     },
     {
       "name": {
-        "en": "Outlet"
+        "en": "Light"
       },
       "class": "light",
       "capabilities": [
@@ -148,5 +148,22 @@
       },
       "id": "outlet"
     }
-  ]
+  ],
+  "capabilities": {
+    "measure_voc_index": {
+      "type": "number",
+      "title": {
+        "en": "VoC Index"
+      },
+      "uiComponent": "sensor",
+      "getable": true,
+      "setable": true,
+      "units": {
+        "en": "VoC"
+      },
+      "min": 0,
+      "max": 500,
+      "step": 0.5
+    }
+  }
 }
